--- a/src/app/indexer/settings/share/share.component.html
+++ b/src/app/indexer/settings/share/share.component.html
@@ -7,7 +7,7 @@
 	<h2 class="gd-secondary"><mat-icon style="opacity: 1; vertical-align: middle;">link</mat-icon> Invite link</h2>
 
 	<div class="row">
-		<div class="col-xs-12">
+		<div class="col-12">
 			<h5>
 				When your allies click on this link, they will be able to gain access to your team after they create a GrepoData account.
 				<br/>You will always be able to manage and revoke their access later on.
@@ -20,7 +20,7 @@
 				<input #shareLink
 				       [ngClass]="{ 'copied': copied }"
 				       [disabled]="true"
-				       class="col-xs-9 col-sm-8 col-md-7 col-lg-5 ur share-link-actual"
+				       class="col-9 col-sm-8 col-md-7 col-lg-5 ur share-link-actual"
 				       type="url"
 				       value="{{share_link}}"
 				       id="siegeShareUrl"
