--- a/src/app/indexer/alliance/alliance.component.html
+++ b/src/app/indexer/alliance/alliance.component.html
@@ -5,7 +5,7 @@
 			<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0; padding: 20px 0 0 !important;" *ngIf="!embedded">
 
 				<h2 style="cursor: pointer; margin: 0;">
-          <span class="hidden-xs hidden-sm">Showing your combined intel for:&nbsp;</span>
+          <span class="d-none d-md-block">Showing your combined intel for:&nbsp;</span>
 					<div class="name-circle" (click)="copyBB()">
 						<img style="height: 25px; margin-top: -5px;" src="../../assets/images/ally_ico.png"/>&nbsp;
 						<span class="gd-brown">{{allianceName}}</span>
@@ -105,7 +105,7 @@
 			<div class="form-group row" style='margin: 0px;'>
 				<h1 style='font-weight: 300; color: #304357; margin: 0;'>
 					<span *ngIf="!mobile" class='world-title' style='color: #18BC9C;'>Sea units</span>
-					<span class="hidden-xs" *ngIf="!embedded">
+					<span class="d-none d-sm-block" *ngIf="!embedded">
             &nbsp;<img src="../../assets/images/ally_ico.png" style="height: 28px; margin-top: -5px;"/>&nbsp;<span>{{allianceName}}</span>
           </span>
 				</h1>
