--- a/src/app/indexer/landing-page/landing-page.component.html
+++ b/src/app/indexer/landing-page/landing-page.component.html
@@ -7,7 +7,7 @@
 					<strong class="gd-secondary">USERSCRIPT:</strong>
           ENEMY CITY INDEXER
 				</h1>
-				<h4 class="gd-tertiary hidden-xs subtitle">Collect and share intelligence with your own private team</h4>
+				<h4 class="gd-tertiary d-none d-sm-block subtitle">Collect and share intelligence with your own private team</h4>
 			</mat-card-title>
 			<mat-card-content>
 
@@ -15,35 +15,35 @@
           <app-login-register></app-login-register>
         </div>
 
-        <div class="container hidden-xs hidden-sm">
+        <div class="container d-none d-md-block">
           <br/>
           <br/>
 
           <div class="row bs-wizard" style="border-bottom:0;">
 
-            <div class="col-xs-3 bs-wizard-step complete" matTooltip="An account is required to collect and share enemy city intelligence">
+            <div class="col-3 bs-wizard-step complete" matTooltip="An account is required to collect and share enemy city intelligence">
               <div class="text-center bs-wizard-stepnum">Step 1</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot"></a>
               <a class="bs-wizard-pulsate"></a>
-              <div class="bs-wizard-info text-center"><strong>Create</strong><span class="hidden-xs hidden-sm hidden-md"> a GrepoData account</span><span class="hidden-lg"> an account</span></div>
+              <div class="bs-wizard-info text-center"><strong>Create</strong><span class="d-none d-lg-block"> a GrepoData account</span><span class="hidden-lg"> an account</span></div>
             </div>
 
-            <div class="col-xs-3 bs-wizard-step" matTooltip="The userscript adds in-game functionality and links to your GrepoData account"><!-- complete -->
+            <div class="col-3 bs-wizard-step" matTooltip="The userscript adds in-game functionality and links to your GrepoData account"><!-- complete -->
               <div class="text-center bs-wizard-stepnum">Step 2</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot inactive"></a>
-              <div class="bs-wizard-info text-center"><strong>Join</strong> a <span class="hidden-xs hidden-sm hidden-md">GrepoData </span><strong>Team</strong></div>
+              <div class="bs-wizard-info text-center"><strong>Join</strong> a <span class="d-none d-lg-block">GrepoData </span><strong>Team</strong></div>
             </div>
 
-            <div class="col-xs-3 bs-wizard-step" matTooltip="Upload new reports while playing the game by clicking the 'Index +' button on forum and inbox reports"><!-- complete -->
+            <div class="col-3 bs-wizard-step" matTooltip="Upload new reports while playing the game by clicking the 'Index +' button on forum and inbox reports"><!-- complete -->
               <div class="text-center bs-wizard-stepnum">Step 3</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot inactive"></a>
               <div class="bs-wizard-info text-center"><strong>Install</strong> the <a routerLink="/userscript">userscript <span class="fa fa-download"></span></a></div>
             </div>
 
-            <div class="col-xs-3 bs-wizard-step" matTooltip="Create a team and invite your allies to share the collected intel"><!-- complete -->
+            <div class="col-3 bs-wizard-step" matTooltip="Create a team and invite your allies to share the collected intel"><!-- complete -->
               <div class="text-center bs-wizard-stepnum">Step 4</div>
               <div class="progress"><div class="progress-bar"></div></div>
               <a class="bs-wizard-dot inactive"></a>
@@ -59,13 +59,13 @@
 
 
         <div class="container" *ngIf="stats != '' && show_stats">
-          <div class="col-xs-12 text-center">
+          <div class="col-12 text-center">
             <h2 #databaseStats style="font-family: Montserrat !important;" class="gd-secondary">
               Usage Statistics 📈
             </h2>
             <div class="" *ngIf="show_stats">
               <div class="">
-                <div class="col-xs-12" style="margin-left: -12px;">
+                <div class="col-12" style="margin-left: -12px;">
                   <ngx-charts-number-card
                     [scheme]="colorScheme"
                     [results]="stats_data"
@@ -83,7 +83,7 @@
         <br/>
 
         <div class="container">
-          <div class="col-xs-12 text-center">
+          <div class="col-12 text-center">
             <br/>
             <h2 style="font-family: Montserrat !important;" class="gd-secondary">
               City Indexer Preview 👀
@@ -94,12 +94,12 @@
           </div>
         </div>
 
-        <div class="container hidden-xs hidden-sm">
+        <div class="container d-none d-md-block">
 
           <br/>
           <br/>
           <br/>
-          <div class="col-xs-12" style="margin: -12px;">
+          <div class="col-12" style="margin: -12px;">
             <app-userscript></app-userscript>
           </div>
         </div>
@@ -111,7 +111,7 @@
           <br/>
           <br/>
           <div class="row">
-            <div class="col-xs-12 col-sm-12">
+            <div class="col-12 col-sm-12">
 							<mat-card class="decorated-card">
 								<mat-card-title class='decorated-card-header-secondary decorated-title text-center' style="margin-bottom: 0px;">
 									<h2>📋 Frequently asked questions</h2>
@@ -132,7 +132,7 @@
 				<br/>
 				<br/>
 				<div class="container text-center">
-					<div class="col-xs-12 col-xs-offset-0 col-sm-6 col-sm-offset-3">
+					<div class="col-12 offset-0 col-md-6 offset-sm-3">
 						<button (click)="scrollTop()" style="font-size: 30px; padding: 10px; width: 100%;" mat-button class="mat-raised-button mat-primary btn-no-index">
 							Sign up today!
 						</button>
