--- a/src/app/indexer/search/search.component.html
+++ b/src/app/indexer/search/search.component.html
@@ -6,7 +6,7 @@
         <div #searchContainer class="search-container container-fluid">
 
           <div class="row">
-            <div class="col-sm-4 search-group" [ngClass]="{'hidden-xs': !searching_players && num_results > 0}">
+            <div class="col-sm-4 search-group" [ngClass]="{'d-none d-sm-block': !searching_players && num_results > 0}">
               <div id="sb-search-players" class="sb-search">
                 <form>
                   <input (click)="clickedPlayerInput()" autocomplete="off" class="sb-search-input" placeholder="Search players..." type="search" value="" name="search" id="search-players" (keyup)="searchPlayers($event)">
@@ -16,7 +16,7 @@
                 </form>
               </div>
             </div>
-            <div class="col-sm-4 search-group" [ngClass]="{'hidden-xs': !searching_alliances && num_results > 0}">
+            <div class="col-sm-4 search-group" [ngClass]="{'d-none d-sm-block': !searching_alliances && num_results > 0}">
               <div id="sb-search-alliances" class="sb-search">
                 <form>
                   <input (click)="clickedAllianceInput()" autocomplete="off" class="sb-search-input" placeholder="Search alliances..." type="search" value="" name="search" id="search-alliances" (keyup)="searchAlliances($event)">
@@ -26,7 +26,7 @@
                 </form>
               </div>
             </div>
-            <div class="col-sm-4 search-group" [ngClass]="{'hidden-xs': !searching_towns && num_results > 0}">
+            <div class="col-sm-4 search-group" [ngClass]="{'d-none d-sm-block': !searching_towns && num_results > 0}">
               <div id="sb-search-towns" class="sb-search">
                 <form>
                   <input (click)="clickedTownInput()" autocomplete="off" class="sb-search-input" placeholder="Search towns..." type="search" value="" name="search" id="search-towns" (keyup)="searchTowns($event)">
@@ -82,10 +82,10 @@
                 <div class="table">
                   <div class="row_custom header default">
                     <div class="cell custom-cell name-cell">Alliance name</div>
-                    <div class="cell hidden-xs">Rank</div>
+                    <div class="cell d-none d-sm-block">Rank</div>
                     <!--<div class="cell hidden-xs hidden-sm">Members</div>-->
-                    <div class="cell hidden-xs">World</div>
-                    <div class="cell hidden-xs hidden-sm hidden-md">Points</div>
+                    <div class="cell d-none d-sm-block">World</div>
+                    <div class="cell d-none d-lg-block">Points</div>
                     <!--<div class="cell hidden-xs">Towns</div>-->
                   </div>
 
@@ -96,16 +96,16 @@
                         {{alliance?.name}}
                       </a>
                     </div>
-                    <div class="cell hidden-xs" style="width: 10%;">
+                    <div class="cell d-none d-sm-block" style="width: 10%;">
                       {{alliance?.rank}}
                     </div>
                     <!--<div class="cell hidden-xs hidden-sm">-->
                       <!--{{alliance?.members}}-->
                     <!--</div>-->
-	                  <div class="cell hidden-xs world-cell" style="width: 25%;">
+	                  <div class="cell d-none d-sm-block world-cell" style="width: 25%;">
 		                  <span [outerHTML]="alliance?.world | WorldNamePipe"></span>
 	                  </div>
-                    <div class="cell hidden-xs hidden-sm hidden-md" style="width: 25%;">
+                    <div class="cell d-none d-lg-block" style="width: 25%;">
                       {{alliance?.points | NumberFilter}}
                     </div>
                     <!--<div class="cell hidden-xs">-->
@@ -128,8 +128,8 @@
                 <div class="table">
                   <div class="row_custom header default">
                   <div class="cell custom-cell">Town name</div>
-                  <div class="cell hidden-xs">Player</div>
-                  <div class="cell hidden-xs hidden-sm">world</div>
+                  <div class="cell d-none d-sm-block">Player</div>
+                  <div class="cell d-none d-md-block">world</div>
                 </div>
 
                   <div *ngFor="let town of towns" class="row_custom">
@@ -139,14 +139,14 @@
                         {{town?.name}}
                       </a>
                     </div>
-                    <div class="cell hidden-xs" style="width: 30%;">
+                    <div class="cell d-none d-sm-block" style="width: 30%;">
                       <a routerLink="/intel/player/{{town?.world}}/{{town?.player_id}}" *ngIf="town?.player_id>0">
                         <img src="../../assets/images/player_ico.png"/>
                         {{town?.player_name}}
                       </a>
                       <span *ngIf="town?.player_id<=0">Ghost</span>
                     </div>
-	                  <div class="cell world-cell hidden-xs hidden-sm" style="width: 30%;">
+	                  <div class="cell world-cell d-none d-md-block" style="width: 30%;">
 		                  <span [outerHTML]="town?.world | WorldNamePipe"></span>
 	                  </div>
                   </div>
