--- a/src/app/indexer/town/town.component.html
+++ b/src/app/indexer/town/town.component.html
@@ -4,8 +4,8 @@
 		<div class="card-header bg-gd-1 text-center text-white" style="margin-bottom: 0;" [ngClass]="{ 'embedded-intel': embedded }">
 
       <h2 style="cursor: pointer; margin: 0;" *ngIf="!embedded">
-        <span class="hidden-xs hidden-sm hidden-md">Showing your combined intel for:&nbsp;</span>
-        <span class="hidden-xs hidden-sm hidden-lg">Combined intel for:&nbsp;</span>
+        <span class="d-none d-lg-block">Showing your combined intel for:&nbsp;</span>
+        <span class="d-none d-md-block d-lg-none">Combined intel for:&nbsp;</span>
 	      <div class="name-circle" (click)="copyBB()">
 		      <img style="height: 25px; margin-top: -5px;" src="../../assets/images/town_ico.png"/>&nbsp;
 		      <span class="gd-brown">{{townName}}</span>
@@ -45,7 +45,7 @@
 			              <mat-tab-group mat-stretch-tabs>
 				              <mat-tab class="history-chart" style="padding: 20px 0; overflow: hidden !important;">
 					              <ng-template mat-tab-label>
-						              <mat-icon style="opacity: 1; vertical-align: bottom;">account_balance</mat-icon>&nbsp;<span class="hidden-xs hidden-sm">Town intelligence</span><span class="hidden-lg hidden-md">Units</span>
+						              <mat-icon style="opacity: 1; vertical-align: bottom;">account_balance</mat-icon>&nbsp;<span class="d-none d-md-block">Town intelligence</span><span class="d-block d-md-none">Units</span>
 					              </ng-template>
 
 					              <div *ngIf="build.length > 0">
@@ -99,7 +99,7 @@
 									              <div class="cell" *ngIf="hasSilver && !embedded">
 										              Silver
 									              </div>
-									              <div class="cell hidden-xs hidden-sm" *ngIf="hasConquest && !embedded" style="max-width: 15vw !important; width: 15vw;">
+									              <div class="cell d-none d-md-block" *ngIf="hasConquest && !embedded" style="max-width: 15vw !important; width: 15vw;">
 										              Siege report
 									              </div>
 									              <div class="cell" *ngIf="hasSharingDetails && !embedded"></div>
@@ -163,7 +163,7 @@
                                   <div class="cell" *ngIf="hasSilver && !embedded">
                                     <span *ngIf="town?.silver">{{town?.silver?.replace('(+',' (+')}}</span>
                                   </div>
-                                  <div class="cell hidden-xs hidden-sm" *ngIf="hasConquest && !embedded">
+                                  <div class="cell d-none d-md-block" *ngIf="hasConquest && !embedded">
                                     <div *ngIf="town?.conquest_id && town?.conquest_id > 0">
                                       <!--<a class="a-link-dialog" (click)="loadConquestDetails(town?.conquest_id)">View report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></a>-->
                                       <button class="gd-btn-2" (click)="loadConquestDetails(town?.conquest_id)">View report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></button>
@@ -236,7 +236,7 @@
 									              <div class="cell" *ngIf="hasSilver && !embedded">
 										              Silver
 									              </div>
-									              <div class="cell hidden-xs hidden-sm" *ngIf="hasConquest && !embedded" style="max-width: 15vw !important; width: 15vw;">
+									              <div class="cell d-none d-md-block" *ngIf="hasConquest && !embedded" style="max-width: 15vw !important; width: 15vw;">
 										              Siege report
 									              </div>
 									              <div class="cell" *ngIf="hasSharingDetails && !embedded"></div>
@@ -247,7 +247,7 @@
                                 <div class='row_custom' *ngIf="town.is_previous_owner_intel==true">
                                   <div class="cell" matTooltip="{{town.type}}">
                                     <img src="../../assets/images/game/towninfo/attack.png" *ngIf="town.type === 'friendly_attack'">
-                                    <div *ngIf="town.type === 'enemy_attack'" style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH; -ms-filter: ;">
+                                    <div *ngIf="town.type === 'enemy_attack'" style="-moz-transform: scaleX(-1); -o-transform: scaleX(-1); -webkit-transform: scaleX(-1); transform: scaleX(-1); filter: FlipH;">
                                       <img src="../../assets/images/game/towninfo/attack.png">
                                     </div>
                                     <img src="../../assets/images/game/towninfo/wisdom.png" *ngIf="town.type === 'wisdom'">
@@ -297,7 +297,7 @@
                                   <div class="cell" *ngIf="hasSilver && !embedded">
                                     <span *ngIf="town?.silver">{{town?.silver?.replace('(+',' (+')}}</span>
                                   </div>
-                                  <div class="cell hidden-xs hidden-sm" *ngIf="hasConquest && !embedded">
+                                  <div class="cell d-none d-md-block" *ngIf="hasConquest && !embedded">
                                     <div *ngIf="town?.conquest_id && town?.conquest_id > 0">
                                       <!--<a class="a-link-dialog" (click)="loadConquestDetails(town?.conquest_id)">View report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></a>-->
                                       <button class="gd-btn-2" (click)="loadConquestDetails(town?.conquest_id)">View report <mat-icon style="opacity: 1; vertical-align: bottom;">launch</mat-icon></button>
